JVM已完成